# Greenlake-Automation

./: .gitignore  CONTEXT.md  FEASIBILITY.md  README.md  alletra_onboard.spec  pyproject.toml
Provisioning_Automation/alletra_onboard/: .gitignore  CONTEXT.md  README.md  alletra_onboard.spec  pyproject.toml
Provisioning_Automation/alletra_onboard/config/: arrays.example.csv  env.example
Provisioning_Automation/alletra_onboard/docs/: SCOPE.md
Provisioning_Automation/alletra_onboard/docs/adr/: 0001-post-init-verification-via-ssh-cli.md  0002-provisioning-driven-by-discovery.md  0003-transport-wsapi-with-readiness-gate.md  0004-auto-remediate-san-zoning.md  0005-decouple-onboarding-into-modes.md  0006-hybrid-control-plane.md
Provisioning_Automation/alletra_onboard/docs/runbooks/: provisioning-esxi-fc.md
Provisioning_Automation/alletra_onboard/frontend/: index.html  package.json  tsconfig.json
Provisioning_Automation/alletra_onboard/frontend/src/: App.tsx  api.ts  main.tsx  modes.ts  workItem.ts
Provisioning_Automation/alletra_onboard/frontend/src/steps/: ArrayStep.tsx  CloudinitStep.tsx  ConfigureStep.tsx  DiscoveryStep.tsx  DsccStep.tsx  GreenLakeStep.tsx  InitSheetStep.tsx  ModeStep.tsx  PrereqStep.tsx  ProvisionPlaceholderStep.tsx  ProvisionStep.tsx  VerifyStep.tsx  ZoningStep.tsx
Provisioning_Automation/alletra_onboard/packaging/: app_main.py
Provisioning_Automation/alletra_onboard/scripts/: build_exe.ps1  build_release.ps1  capture_cloudinit_ui.py  capture_dscc_ui.py  setup_jumpbox.ps1
Provisioning_Automation/alletra_onboard/scripts/discovery/: discover_array.py  discover_esxi.ps1  discover_esxi_ssh.py  probe_esxi_paths.py  probe_switch.py  probe_wsapi.py  probe_zoning.py  verify_zoning_no_switch.py
Provisioning_Automation/alletra_onboard/src/alletra_onboard/: config.py
Provisioning_Automation/alletra_onboard/src/alletra_onboard/api/: app.py  schemas.py
Provisioning_Automation/alletra_onboard/src/alletra_onboard/application/: health.py  init_sheet.py  intake.py  onboarding_service.py  preflight_service.py  provisioning.py  verification.py
Provisioning_Automation/alletra_onboard/tests/: conftest.py
Provisioning_Automation/alletra_onboard/tests/contract/: test_auth.py  test_greenlake_payloads.py  test_greenlake_read_clients.py  test_http_poll.py  test_provisioning.py
Provisioning_Automation/alletra_onboard/tests/unit/: test_api.py  test_clock.py  test_cloudinit_wizard.py  test_configuring.py  test_debug_browser.py  test_discovery_tool.py  test_greenlake_preflight.py  test_init_sheet.py  test_intake.py  test_onboarding_service.py  test_storage_domain.py  test_storage_services.py  test_store_work_items.py  test_workflow.py
(+2556 files in other folders)
