[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "alletra-onboard"
version = "0.2.0"
description = "Local operator automation for HPE Alletra MP B10000 GreenLake and DSCC onboarding."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "tenacity>=8.5.0",
  "structlog>=24.2.0",
  "playwright>=1.45.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]

[project.scripts]
onboard = "alletra_onboard.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/alletra_onboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
