[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "alletra-onboard"
version = "0.3.0"
description = "Local operator automation for HPE Alletra MP B10000 GreenLake and DSCC onboarding."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "tenacity>=8.5.0",
  "structlog>=24.2.0",
  "playwright>=1.45.0",
  "openpyxl>=3.1.0",
  "paramiko>=3.4.0",
  # Storage provisioning (Phase 2). 4.2.14 is the floor for the Alletra MP B10000: earlier
  # releases POST to /credentials instead of /api/v1/credentials and fail to authenticate
  # (verified by deep research, Launchpad bug #2128677).
  "python-3parclient>=4.2.14",
  "pyvmomi>=8.0.0",  # read-only ESXi HBA/WWPN discovery via vCenter
  "requests>=2.31.0",  # python-3parclient's HTTP transport for WSAPI
  "eventlet>=0.33.0",  # imported (not declared) by python-3parclient's ssh module; dormant for us
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]

[project.scripts]
onboard = "alletra_onboard.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/alletra_onboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:.*Eventlet is deprecated.*",  # transitive via python-3parclient's ssh module; dormant for us
]

[tool.ruff]
line-length = 100
target-version = "py312"
